2nd attempt. for CSS hide collapsed when JS is disabled What is wrong with the collapse_api semantics: create a new class to identify which section is the collapsed one. This new class is not affected by JS, and is hidden by default CSS the problem with previous fix: JS writes the collapse state in a cookie and server access that value to remenber the display state of each section
Based on this cookie, the classes "collapse_closed, collapse_open" may
be reversed and caused the bug described by dregad, as now,a collapsed
section has class 'collapse_open' ...wtf?

--- a/css/default.css
+++ b/css/default.css
@@ -806,6 +806,6 @@ div.timeline * div.action { padding-top: 3px; }
 .details-buttons     { float: left;  width: auto; }
 
 /* Hide collapsed sections for javascript disabled presentation  */
-.collapse-closed {
+.collapse-section-closed {
 	display: none;
 }
